# RayTracing

./: .gitignore  CMakeLists.txt  Notes.docx  README.md  test.cu  ~$Notes.docx
RayTracing/: 1_firstP3.cpp  3_main.cpp  CMakeLists.txt  C_image.h  C_image_soa.h  C_main.cu  C_render_cpu_baseline.h  C_render_cpu_openmp.h  C_render_cpu_threads.h  C_timer.h  color.h  ray.h  vec3.h
